@@ -8,6 +8,7 @@ package com.powsybl.openloadflow.ac.outerloop;
 
 import com.powsybl.commons.reporter.Reporter;
 import com.powsybl.math.matrix.DenseMatrix;
+import com.powsybl.math.matrix.LUDecomposition;
 import com.powsybl.openloadflow.ac.AcLoadFlowContext;
 import com.powsybl.openloadflow.ac.AcOuterLoopContext;
 import com.powsybl.openloadflow.ac.equations.AcEquationType;
@@ -17,13 +18,11 @@ import com.powsybl.openloadflow.equations.EquationTerm;
 import com.powsybl.openloadflow.equations.JacobianMatrix;
 import com.powsybl.openloadflow.lf.outerloop.OuterLoopStatus;
 import com.powsybl.openloadflow.network.*;
-import com.powsybl.openloadflow.util.PerUnit;
 import org.apache.commons.lang3.mutable.MutableDouble;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
@@ -32,64 +31,58 @@ public class SecondaryVoltageControlOuterLoop implements AcOuterLoop {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(SecondaryVoltageControlOuterLoop.class);
 
-    public static final double SENSI_V_V_EPS_DEFAULT_VALUE = 1e-2;
+    public static final String NAME = "SecondaryVoltageControl";
 
-    private static final double TARGET_V_DIFF_EPS = 1e-1; // in Kv
-    private static final double DQ_PU_EPS = 1d / PerUnit.SB; // in PU
-
-    private final double sensiVvEps;
-
-    private final double minPlausibleTargetVoltage;
-
-    private final double maxPlausibleTargetVoltage;
-
-    public SecondaryVoltageControlOuterLoop(double sensiVvEps, double minPlausibleTargetVoltage, double maxPlausibleTargetVoltage) {
-        this.sensiVvEps = sensiVvEps;
-        this.minPlausibleTargetVoltage = minPlausibleTargetVoltage;
-        this.maxPlausibleTargetVoltage = maxPlausibleTargetVoltage;
-    }
+    private static final double DV_EPS = 1E-4; // 0.1 kV
+    private static final double DK_DIFF_MAX_EPS = 1E-3; // 1 MVar
 
     @Override
-    public String getType() {
-        return "SecondaryVoltageControl";
+    public String getName() {
+        return NAME;
     }
 
-    private static boolean isValid(LfBus bus) {
-        return !bus.isDisabled() && bus.isGeneratorVoltageControlEnabled();
+    private static List<LfBus> findControllerBuses(LfBus controlledBus) {
+        return controlledBus.getGeneratorVoltageControl().orElseThrow()
+                .getMergedControllerElements().stream()
+                .filter(controllerBus -> !controllerBus.isDisabled())
+                .toList();
     }
 
-    private static List<LfBus> getControllerBuses(LfBus controlledBus) {
-        return controlledBus.getGeneratorVoltageControl()
-                .filter(voltageControl -> voltageControl.getMergeStatus() == VoltageControl.MergeStatus.MAIN)
-                .orElseThrow()
-                .getMergedControllerElements()
-                .stream().filter(SecondaryVoltageControlOuterLoop::isValid)
-                .collect(Collectors.toList());
+    private static List<LfBus> findVoltageControlEnabledControllerBuses(LfBus controlledBus) {
+        return findControllerBuses(controlledBus).stream()
+                .filter(LfBus::isGeneratorVoltageControlEnabled)
+                .toList();
     }
 
-    private void findActiveSecondaryVoltageControls(LfNetwork network, Map<LfSecondaryVoltageControl, List<LfBus>> activeSecondaryVoltageControls,
-                                                    Set<LfBus> allBusSet) {
-        List<LfSecondaryVoltageControl> secondaryVoltageControls = network.getSecondaryVoltageControls().stream()
-                .filter(control -> !control.getPilotBus().isDisabled())
-                .collect(Collectors.toList());
-        for (LfSecondaryVoltageControl secondaryVoltageControl : secondaryVoltageControls) {
-            List<LfBus> activeControlledBuses = secondaryVoltageControl.getControlledBuses().stream()
-                    .filter(SecondaryVoltageControlOuterLoop::isValid)
-                    .filter(controlledBus -> {
-                        double targetV = controlledBus.getGeneratorVoltageControl().orElseThrow().getTargetValue();
-                        return targetV > minPlausibleTargetVoltage && targetV < maxPlausibleTargetVoltage;
-                    })
-                    .collect(Collectors.toList());
-            if (!activeControlledBuses.isEmpty()) {
-                activeSecondaryVoltageControls.put(secondaryVoltageControl, activeControlledBuses);
-                for (LfBus activeControlledBus : activeControlledBuses) {
-                    if (!allBusSet.add(activeControlledBus)) {
-                        throw new IllegalStateException("Non disjoint secondary voltage control zones");
+    record ActiveSecondaryVoltageControl(LfSecondaryVoltageControl secondaryVoltageControl,
+                                         List<LfBus> activeControlledBuses) {
+    }
+
+    private static boolean filterActiveControlledBus(LfBus controlledBus) {
+        GeneratorVoltageControl voltageControl = controlledBus.getGeneratorVoltageControl().orElseThrow();
+        return voltageControl.isVisible() && voltageControl.getMergeStatus() == VoltageControl.MergeStatus.MAIN;
+    }
+
+    private static boolean filterSecondaryVoltageControl(LfSecondaryVoltageControl secondaryVoltageControl) {
+        return !secondaryVoltageControl.getPilotBus().isDisabled();
+    }
+
+    private List<ActiveSecondaryVoltageControl> findActiveSecondaryVoltageControls(LfNetwork network) {
+        List<ActiveSecondaryVoltageControl> activeSecondaryVoltageControls = new ArrayList<>();
+
+        network.getSecondaryVoltageControls().stream()
+                .filter(SecondaryVoltageControlOuterLoop::filterSecondaryVoltageControl)
+                .forEach(control -> {
+                    List<LfBus> activeControlledBuses = control.getControlledBuses().stream()
+                            .filter(controlledBus -> filterActiveControlledBus(controlledBus)
+                                    && !findVoltageControlEnabledControllerBuses(controlledBus).isEmpty())
+                            .toList();
+                    if (!activeControlledBuses.isEmpty()) {
+                        activeSecondaryVoltageControls.add(new ActiveSecondaryVoltageControl(control, activeControlledBuses));
                     }
-                    allBusSet.addAll(getControllerBuses(activeControlledBus));
-                }
-            }
-        }
+                });
+
+        return activeSecondaryVoltageControls;
     }
 
     private static Map<Integer, Integer> buildBusIndex(List<LfBus> buses) {
@@ -112,20 +105,20 @@ public class SecondaryVoltageControlOuterLoop implements AcOuterLoop {
             this.sensitivities = Objects.requireNonNull(sensitivities);
         }
 
-        static SensitivityContext create(List<LfBus> buses, AcLoadFlowContext context) {
-            var busNumToSensiColumn = buildBusIndex(buses);
+        static SensitivityContext create(List<LfBus> controlledBuses, AcLoadFlowContext context) {
+            var busNumToSensiColumn = buildBusIndex(controlledBuses);
 
-            DenseMatrix sensitivities = calculateSensitivityValues(buses, busNumToSensiColumn, context.getEquationSystem(),
+            DenseMatrix sensitivities = calculateSensitivityValues(controlledBuses, busNumToSensiColumn, context.getEquationSystem(),
                                                                    context.getJacobianMatrix());
 
             return new SensitivityContext(busNumToSensiColumn, sensitivities);
         }
 
-        private static DenseMatrix calculateSensitivityValues(List<LfBus> controllerBuses, Map<Integer, Integer> busNumToSensiColumn,
+        private static DenseMatrix calculateSensitivityValues(List<LfBus> controlledBuses, Map<Integer, Integer> busNumToSensiColumn,
                                                               EquationSystem<AcVariableType, AcEquationType> equationSystem,
                                                               JacobianMatrix<AcVariableType, AcEquationType> j) {
-            DenseMatrix rhs = new DenseMatrix(equationSystem.getIndex().getSortedEquationsToSolve().size(), controllerBuses.size());
-            for (LfBus controlledBus : controllerBuses) {
+            DenseMatrix rhs = new DenseMatrix(equationSystem.getIndex().getSortedEquationsToSolve().size(), controlledBuses.size());
+            for (LfBus controlledBus : controlledBuses) {
                 equationSystem.getEquation(controlledBus.getNum(), AcEquationType.BUS_TARGET_V)
                         .ifPresent(equation -> rhs.set(equation.getColumn(), busNumToSensiColumn.get(controlledBus.getNum()), 1d));
             }
@@ -153,11 +146,15 @@ public class SecondaryVoltageControlOuterLoop implements AcOuterLoop {
             return (EquationTerm<AcEquationType, AcEquationType>) shunt.getQ();
         }
 
+        double calculateSensiK(LfBus controllerBus, LfBus controlledBus) {
+            return 2 * calculateSensiQ(controllerBus, controlledBus)
+                    / (controllerBus.getMaxQ() - controllerBus.getMinQ());
+        }
+
         /**
          * Calculate controlled bus voltage to controller bus reactive power injection sensitivity.
          */
-        double calculateSensiVq(LfBus controllerBus) {
-            LfBus controlledBus = controllerBus.getGeneratorVoltageControl().orElseThrow().getControlledBus();
+        double calculateSensiQ(LfBus controllerBus, LfBus controlledBus) {
             int controlledBusSensiColumn = busNumToSensiColumn.get(controlledBus.getNum());
 
             MutableDouble sq = new MutableDouble();
@@ -180,188 +177,255 @@ public class SecondaryVoltageControlOuterLoop implements AcOuterLoop {
         /**
          * Calculate controlled buses voltage to pilot bus voltage sensitivities.
          */
-        double[] calculateSensiVv(List<LfBus> controlledBuses, LfBus pilotBus) {
-            double[] sensiVv = new double[controlledBuses.size()];
-            for (int i = 0; i < controlledBuses.size(); i++) {
-                LfBus controlledBus = controlledBuses.get(i);
-                int controlledBusSensiColumn = busNumToSensiColumn.get(controlledBus.getNum());
-                sensiVv[i] = getCalculatedV(pilotBus).calculateSensi(sensitivities, controlledBusSensiColumn);
-            }
-            return sensiVv;
+        double calculateSensiVpp(LfBus controlledBus, LfBus pilotBus) {
+            int controlledBusSensiColumn = busNumToSensiColumn.get(controlledBus.getNum());
+            return getCalculatedV(pilotBus).calculateSensi(sensitivities, controlledBusSensiColumn);
         }
     }
 
-    static class SensiVq {
-
-        final double[] sqi;
-
-        final double[] si;
-
-        final Map<Integer, Integer> controllerBusIndex;
-
-        SensiVq(double[] sqi, double[] si, Map<Integer, Integer> controllerBusIndex) {
-            this.sqi = sqi;
-            this.si = si;
-            this.controllerBusIndex = controllerBusIndex;
-        }
-
-        double getSqi(LfBus controllerBus) {
-            return sqi[controllerBusIndex.get(controllerBus.getNum())];
-        }
+    private static double qToK(double q, LfBus controllerBus) {
+        return (2 * q - controllerBus.getMaxQ() - controllerBus.getMinQ())
+                / (controllerBus.getMaxQ() - controllerBus.getMinQ());
     }
 
-    /**
-     * Calculate:
-     *  - controlled bus voltage to controller bus reactive power injection sensitivity.
-     *  - pilot bus voltage to controller bus reactive power injection sensitivity.
-     */
-    private SensiVq calculateSensiVq(String zoneName, SensitivityContext sensitivityContext, List<LfBus> controlledBuses, double[] svi) {
-        // get list of all controllers of the zone
-        List<LfBus> allControllerBuses = controlledBuses.stream()
-                .flatMap(controlledBus -> getControllerBuses(controlledBus).stream())
-                .collect(Collectors.toList());
-        var controllerBusIndex = buildBusIndex(controlledBuses);
+    private static double calculateK(LfBus controllerBus) {
+        double q = controllerBus.getQ().eval() + controllerBus.getLoadTargetQ();
+        return qToK(q, controllerBus);
+    }
 
-        double[] si = new double[allControllerBuses.size()];
-        double[] sqi = new double[allControllerBuses.size()];
-        List<String> filteredControlledBusIds = new ArrayList<>();
-        for (int i = 0; i < controlledBuses.size(); i++) {
-            LfBus controlledBus = controlledBuses.get(i);
-            // we need to filter very small sensitivity to avoid large target v shift
-            if (Math.abs(svi[i]) > sensiVvEps) {
-                for (LfBus controllerBus : getControllerBuses(controlledBus)) {
-                    double sq = sensitivityContext.calculateSensiVq(controllerBus);
-                    int j = controllerBusIndex.get(controllerBus.getNum());
-                    if (sq != 0) {
-                        sqi[j] = sq;
-                        si[j] = svi[i] / sq;
-                    }
-                }
-            } else {
-                filteredControlledBusIds.add(controlledBus.getId());
+    private static DenseMatrix createA(List<LfBus> controllerBuses, Map<Integer, Integer> controllerBusIndex) {
+        int n = controllerBuses.size();
+        DenseMatrix a = new DenseMatrix(n, n);
+        for (LfBus controllerBusI : controllerBuses) {
+            for (LfBus controllerBusJ : controllerBuses) {
+                int i = controllerBusIndex.get(controllerBusI.getNum());
+                int j = controllerBusIndex.get(controllerBusJ.getNum());
+                a.set(i, j, i == j ? 1d - (1d / n) : -1d / n);
             }
         }
-
-        if (!filteredControlledBusIds.isEmpty()) {
-            LOGGER.trace("Target voltage of controlled buses {} of zone '{}' won't be adjusted because sensitivity on pilot point voltage is too small",
-                    filteredControlledBusIds, zoneName);
-        }
-
-        return new SensiVq(sqi, si, controllerBusIndex);
+        return a;
     }
 
-    /**
-     * <pre>
-     * pilot_dv = sum_i(svi * dvi) where i are all controlled buses
-     * dvi: controlled bus i (primary voltage control) voltage variation, needed to reach pilot bus target voltage
-     * svi: the sensitivity of controlled bus i voltage to pilot bus
-     *
-     * in the following equations i are controller buses and all svi and dvi of controlled buses are used for their
-     * corresponding controller buses
-     * dqi = dvi * sqi
-     * sqi: the sensitivity of a controlled bus voltage to its controller bus i reactive power injection
-     * pilot_dv = sum_i(svi * (dqi / sqi))
-     * pilot_dv = sum_i(si * dqi)
-     * si = svi / sqi
-     * si: the sensitivity of controller bus i reactive power injection to a pilot bus voltage
-     *
-     * we want all generators of the zone to provide same reactive power to reach pilot bus target voltage
-     * dq = dq1 = dq2 = ...
-     * pilot_dv = sum_i(si) * dq
-     * dq = pilot_dv / sum_i(si)
-     *
-     * we can now compute new target v shift for all controlled buses (primary voltage control new target v)
-     * dvi = dq / sqi
-     * </pre>
-     */
-    private boolean adjustPrimaryVoltageControlTargets(String zoneName, SensitivityContext sensitivityContext,
-                                                       List<LfBus> controlledBuses, LfBus pilotBus, double pilotDv) {
+    private static DenseMatrix createK0(List<LfBus> controllerBuses, Map<Integer, Integer> controllerBusIndex) {
+        int n = controllerBuses.size();
+        DenseMatrix k0 = new DenseMatrix(n, 1);
+        for (LfBus controllerBus : controllerBuses) {
+            int i = controllerBusIndex.get(controllerBus.getNum());
+            k0.set(i, 0, calculateK(controllerBus));
+        }
+        return k0;
+    }
+
+    private static DenseMatrix createJk(SensitivityContext sensitivityContext, List<LfBus> controllerBuses, Map<Integer, Integer> controllerBusIndex) {
+        int n = controllerBuses.size();
+        DenseMatrix jK = new DenseMatrix(n, n);
+        for (LfBus controllerBusI : controllerBuses) {
+            for (LfBus controllerBusJ : controllerBuses) {
+                int i = controllerBusIndex.get(controllerBusI.getNum());
+                int j = controllerBusIndex.get(controllerBusJ.getNum());
+                LfBus controlledBus2 = controllerBusJ.getGeneratorVoltageControl().orElseThrow().getControlledBus();
+                jK.set(i, j, sensitivityContext.calculateSensiK(controllerBusI, controlledBus2));
+            }
+        }
+        return jK;
+    }
+
+    private static DenseMatrix createJvpp(SensitivityContext sensitivityContext, LfBus pilotBus, List<LfBus> controllerBuses, Map<Integer, Integer> controllerBusIndex) {
+        int n = controllerBuses.size();
+        DenseMatrix jVpp = new DenseMatrix(n, 1);
+        for (LfBus controllerBus : controllerBuses) {
+            int i = controllerBusIndex.get(controllerBus.getNum());
+            LfBus controlledBus = controllerBus.getGeneratorVoltageControl().orElseThrow().getControlledBus();
+            jVpp.set(i, 0, sensitivityContext.calculateSensiVpp(controlledBus, pilotBus));
+        }
+        return jVpp;
+    }
+
+    private record KStats(double kAverage, double dkDiffMax, boolean allAtLimits) {
+    }
+
+    private static KStats calculateKStats(List<LfBus> controllerBuses) {
+        double[] ks = controllerBuses.stream().mapToDouble(SecondaryVoltageControlOuterLoop::calculateK).toArray();
+        double dkDiffMax = Arrays.stream(ks).max().orElseThrow() - Arrays.stream(ks).min().orElseThrow();
+        double kAverage = Arrays.stream(ks).average().orElseThrow();
+        boolean allAtLimits = Arrays.stream(ks).allMatch(k -> k > 1) || Arrays.stream(ks).allMatch(k -> k < -1);
+        return new KStats(kAverage, dkDiffMax, allAtLimits);
+    }
+
+    private static double calculatePilotPointDv(LfSecondaryVoltageControl secondaryVoltageControl) {
+        return secondaryVoltageControl.getTargetValue() - secondaryVoltageControl.getPilotBus().getV();
+    }
+
+    private boolean processSecondaryVoltageControl(LfSecondaryVoltageControl secondaryVoltageControl, SensitivityContext sensitivityContext,
+                                                   List<LfBus> controlledBuses) {
         boolean adjusted = false;
 
-        // calculate sensitivity of controlled buses voltage to pilot bus voltage
-        double[] svi = sensitivityContext.calculateSensiVv(controlledBuses, pilotBus);
+        List<LfBus> controllerBuses = controlledBuses.stream()
+                .flatMap(controlledBus -> findVoltageControlEnabledControllerBuses(controlledBus).stream())
+                .toList();
 
-        // calculate sensitivity of controlled buses voltage to controller buses reactive power injection
-        // and sensitivity of controller bus reactive power injection to pilot bus voltage
-        var sensiVq = calculateSensiVq(zoneName, sensitivityContext, controlledBuses, svi);
+        double pilotDv = calculatePilotPointDv(secondaryVoltageControl);
+        KStats kStats = calculateKStats(controllerBuses);
+        if (Math.abs(pilotDv) > DV_EPS || !kStats.allAtLimits() && Math.abs(kStats.dkDiffMax()) > DK_DIFF_MAX_EPS) {
+            var pilotBus = secondaryVoltageControl.getPilotBus();
+            if (LOGGER.isDebugEnabled()) {
+                long allControllerBusesCount = controlledBuses.stream()
+                        .mapToLong(controlledBus -> findControllerBuses(controlledBus).size())
+                        .sum();
+                LOGGER.debug("Secondary voltage control of zone '{}': {}/{} controller buses available, pilot point dv is {} kV, controller buses dk diff max is {} (k average is {})",
+                        secondaryVoltageControl.getZoneName(), controllerBuses.size(), allControllerBusesCount, pilotDv * pilotBus.getNominalV(), kStats.dkDiffMax(), kStats.kAverage());
+            }
 
-        double siSum = Arrays.stream(sensiVq.si).sum();
-        if (siSum != 0) {
-            // supposing we want all controllers to shift to same amount of reactive power
-            double dq = pilotDv / siSum;
-            if (Math.abs(dq) > DQ_PU_EPS) {
-                LOGGER.trace("Each of the controller buses of zone '{}' need to be adjusted of {} MVar", zoneName, dq * PerUnit.SB);
+            var controllerBusIndex = buildBusIndex(controllerBuses);
 
-                for (LfBus controlledBus : controlledBuses) {
-                    double pvcDv = 0;
-                    for (LfBus controllerBus : getControllerBuses(controlledBus)) {
-                        double sqi = sensiVq.getSqi(controllerBus);
-                        if (sqi != 0) {
-                            pvcDv += dq / sqi;
-                        }
-                    }
-                    if (pvcDv != 0) {
-                        var pvc = controlledBus.getGeneratorVoltageControl().orElseThrow();
-                        double newPvcTargetV = pvc.getTargetValue() + pvcDv;
-                        String plausibleTargetInfos = "";
-                        if (newPvcTargetV > maxPlausibleTargetVoltage) {
-                            newPvcTargetV = maxPlausibleTargetVoltage;
-                            plausibleTargetInfos = " (cut to max plausible target voltage)";
-                        }
-                        if (newPvcTargetV < minPlausibleTargetVoltage) {
-                            newPvcTargetV = minPlausibleTargetVoltage;
-                            plausibleTargetInfos = " (cut to min plausible target voltage)";
-                        }
-                        LOGGER.trace("Adjust target voltage of controlled bus '{}': {} -> {}{}",
-                                controlledBus.getId(), pvc.getTargetValue() * controlledBus.getNominalV(),
-                                newPvcTargetV * controlledBus.getNominalV(), plausibleTargetInfos);
-                        pvc.setTargetValue(newPvcTargetV);
-                        adjusted = true;
-                    }
-                }
+            DenseMatrix a = createA(controllerBuses, controllerBusIndex);
+
+            DenseMatrix k0 = createK0(controllerBuses, controllerBusIndex);
+
+            DenseMatrix rhs = a.times(k0, -1);
+
+            DenseMatrix jK = createJk(sensitivityContext, controllerBuses, controllerBusIndex);
+
+            DenseMatrix jVpp = createJvpp(sensitivityContext, pilotBus, controllerBuses, controllerBusIndex);
+
+            DenseMatrix jVppT = jVpp.transpose();
+
+            DenseMatrix b = a.times(jK);
+
+            // replace last row
+            for (int j = 0; j < b.getColumnCount(); j++) {
+                b.set(b.getRowCount() - 1, j, jVppT.get(0, j));
+            }
+            rhs.set(rhs.getRowCount() - 1, 0, pilotDv);
+
+            try (LUDecomposition luDecomposition = b.decomposeLU()) {
+                luDecomposition.solve(rhs);
+            }
+            @SuppressWarnings("UnnecessaryLocalVariable")
+            DenseMatrix dv = rhs;
+
+            for (LfBus controllerBus : controllerBuses) {
+                int i = controllerBusIndex.get(controllerBus.getNum());
+                var pvc = controllerBus.getGeneratorVoltageControl().orElseThrow();
+                LfBus controlledBus = pvc.getControlledBus();
+                double newPvcTargetV = pvc.getTargetValue() + dv.get(i, 0);
+                LOGGER.trace("Adjust target voltage of controlled bus '{}': {} -> {}",
+                        controlledBus.getId(), pvc.getTargetValue() * controlledBus.getNominalV(),
+                        newPvcTargetV * controlledBus.getNominalV());
+                pvc.setTargetValue(newPvcTargetV);
+                adjusted = true;
             }
         }
 
         return adjusted;
     }
 
+    private static void classifyControllerBuses(LfSecondaryVoltageControl control, List<LfBus> allControllerBuses,
+                                                List<LfBus> controllerBusesToMinQ, List<LfBus> controllerBusesToMaxQ) {
+        control.getControlledBuses().stream()
+                .filter(SecondaryVoltageControlOuterLoop::filterActiveControlledBus)
+                .forEach(controlledBus -> findControllerBuses(controlledBus)
+                        .forEach(controllerBus -> {
+                            allControllerBuses.add(controllerBus);
+                            controllerBus.getQLimitType().ifPresent(qLimitType -> {
+                                if (qLimitType == LfBus.QLimitType.MIN_Q) {
+                                    controllerBusesToMinQ.add(controllerBus);
+                                } else { // MAX_Q
+                                    controllerBusesToMaxQ.add(controllerBus);
+                                }
+                            });
+                        }));
+    }
+
+    private static void tryToReEnableHelpfulControllerBuses(LfSecondaryVoltageControl control) {
+        List<LfBus> controllerBusesToMinQ = new ArrayList<>();
+        List<LfBus> controllerBusesToMaxQ = new ArrayList<>();
+        List<LfBus> allControllerBuses = new ArrayList<>();
+        classifyControllerBuses(control, allControllerBuses, controllerBusesToMinQ, controllerBusesToMaxQ);
+
+        var pilotBus = control.getPilotBus();
+        if (controllerBusesToMinQ.size() == allControllerBuses.size() && pilotBus.getV() < control.getTargetValue() // all controllers are to min q
+                || controllerBusesToMaxQ.size() == allControllerBuses.size() && pilotBus.getV() > control.getTargetValue()) { // all controllers are to max q
+            for (LfBus controllerBus : allControllerBuses) {
+                controllerBus.setGeneratorVoltageControlEnabled(true);
+                controllerBus.setQLimitType(null);
+            }
+            LOGGER.debug("Secondary voltage control of zone '{}': all to limit controller buses have been re-enabled because might help to reach pilot bus target",
+                    control.getZoneName());
+        } else {
+            List<LfBus> controllerBusesToLimit = new ArrayList<>(controllerBusesToMinQ.size() + controllerBusesToMaxQ.size());
+            controllerBusesToLimit.addAll(controllerBusesToMinQ);
+            controllerBusesToLimit.addAll(controllerBusesToMaxQ);
+            if (!controllerBusesToLimit.isEmpty() && controllerBusesToLimit.size() < allControllerBuses.size()) {
+                for (LfBus controllerBus : controllerBusesToLimit) {
+                    controllerBus.setGeneratorVoltageControlEnabled(true);
+                    controllerBus.setQLimitType(null);
+                }
+                LOGGER.debug("Secondary voltage control of zone '{}': controller buses {} have been re-enabled because might help to reach pilot bus target",
+                        control.getZoneName(), controllerBusesToLimit);
+            }
+        }
+    }
+
+    private static void tryToReEnableHelpfulControllerBuses(LfNetwork network) {
+        network.getSecondaryVoltageControls().stream()
+                .filter(SecondaryVoltageControlOuterLoop::filterSecondaryVoltageControl)
+                .forEach(SecondaryVoltageControlOuterLoop::tryToReEnableHelpfulControllerBuses);
+    }
+
+    private static void logZonesWithAllBusControllersAtReactivePowerLimit(LfNetwork network) {
+        List<String> zoneNames = network.getSecondaryVoltageControls().stream()
+                .filter(SecondaryVoltageControlOuterLoop::filterSecondaryVoltageControl)
+                .filter(control -> {
+                    List<LfBus> enabledControllerBuses = control.getControlledBuses().stream()
+                            .filter(SecondaryVoltageControlOuterLoop::filterActiveControlledBus)
+                            .flatMap(controlledBus -> findVoltageControlEnabledControllerBuses(controlledBus).stream())
+                            .toList();
+                    return enabledControllerBuses.isEmpty();
+                })
+                .map(LfSecondaryVoltageControl::getZoneName)
+                .toList();
+        if (!zoneNames.isEmpty()) {
+            LOGGER.info("Controller buses of secondary voltage control zones {} cannot produce or absorb more reactive power",
+                    zoneNames);
+        }
+    }
+
     @Override
     public OuterLoopStatus check(AcOuterLoopContext context, Reporter reporter) {
         LfNetwork network = context.getNetwork();
 
-        // find active secondary voltage controls
-        //  - pilot bus should be enabled
-        //  - at least one primary control controlled bus should be enabled
-        Map<LfSecondaryVoltageControl, List<LfBus>> activeSecondaryVoltageControls = new LinkedHashMap<>();
-        Set<LfBus> allBusSet = new LinkedHashSet<>();
-        findActiveSecondaryVoltageControls(network, activeSecondaryVoltageControls, allBusSet);
+        // try to re-enable controller buses that have reached a reactive power limit (so bus switched to PQ) if they
+        // can help to reach pilot point voltage target
+        tryToReEnableHelpfulControllerBuses(network);
+
+        // log zones where all controllers have reached reactive power limit
+        logZonesWithAllBusControllersAtReactivePowerLimit(network);
+
+        // find active zones, so one that could still try to reach pilot point voltage target
+        // but adjusting voltage target of controller buses
+        List<ActiveSecondaryVoltageControl> activeSecondaryVoltageControls = findActiveSecondaryVoltageControls(network);
 
         if (activeSecondaryVoltageControls.isEmpty()) {
             return OuterLoopStatus.STABLE;
         }
 
-        List<LfBus> allBusList = new ArrayList<>(allBusSet);
+        List<LfBus> allControlledBuses = activeSecondaryVoltageControls.stream()
+                .flatMap(activeSecondaryVoltageControl -> activeSecondaryVoltageControl.activeControlledBuses().stream())
+                .toList();
 
-        SensitivityContext sensitivityContext = SensitivityContext.create(allBusList, context.getLoadFlowContext());
+        SensitivityContext sensitivityContext = SensitivityContext.create(allControlledBuses, context.getLoadFlowContext());
 
         OuterLoopStatus status = OuterLoopStatus.STABLE;
 
         List<String> adjustedZoneNames = new ArrayList<>();
-        for (var e : activeSecondaryVoltageControls.entrySet()) {
-            var secondaryVoltageControl = e.getKey();
-            var controlledBuses = e.getValue();
-            var pilotBus = secondaryVoltageControl.getPilotBus();
-            double svcTargetDv = secondaryVoltageControl.getTargetValue() - pilotBus.getV();
-            if (Math.abs(svcTargetDv) * pilotBus.getNominalV() > TARGET_V_DIFF_EPS) {
-                LOGGER.debug("Secondary voltage control of zone '{}' needs a pilot point voltage adjustment: {} -> {}",
-                        secondaryVoltageControl.getZoneName(), pilotBus.getV() * pilotBus.getNominalV(),
-                        secondaryVoltageControl.getTargetValue() * pilotBus.getNominalV());
-                boolean adjusted = adjustPrimaryVoltageControlTargets(secondaryVoltageControl.getZoneName(), sensitivityContext, controlledBuses,
-                                                                      pilotBus, svcTargetDv);
-                if (adjusted) {
-                    adjustedZoneNames.add(secondaryVoltageControl.getZoneName());
-                    status = OuterLoopStatus.UNSTABLE;
-                }
+        for (var activeSecondaryVoltageControl : activeSecondaryVoltageControls) {
+            var secondaryVoltageControl = activeSecondaryVoltageControl.secondaryVoltageControl();
+            var controlledBuses = activeSecondaryVoltageControl.activeControlledBuses();
+            boolean adjusted = processSecondaryVoltageControl(secondaryVoltageControl, sensitivityContext, controlledBuses);
+            if (adjusted) {
+                adjustedZoneNames.add(secondaryVoltageControl.getZoneName());
+                status = OuterLoopStatus.UNSTABLE;
             }
         }
         if (!adjustedZoneNames.isEmpty()) {
